codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_pets_picker.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Select Pet
  Choose a pet to wake in the terminal.

  Type to filter pets...
  Disable terminal pets
  BSOD                   A tiny blue-screen
                         gremlin
  Dewey                  A tidy duck for calm
                         workspace days
  Fireball               Hot path energy for          Loading preview...
                         fast iteration
› Mantis                 The original Mantis
                         companion
  Null Signal            Quiet signal from the
                         void
  Rocky                  A steady rock when
                         the diff gets large
  Seedy                  Small green shoots
                         for new ideas

  Press enter to confirm or esc to go back
